Se actualizo con el ultimo war enviado por el grupo de wpp , para que funcione , creen la base de dato.

--- a/WebContent/logeo.xhtml
+++ b/WebContent/logeo.xhtml
@@ -3,13 +3,13 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core">
+	xmlns:f="http://java.sun.com/jsf/core"
+	>
 
 <h:head>
 
 	<title>GYM</title>
 	<h:outputStylesheet library="css" name="demo.css" />
-
 	<h:outputStylesheet library="css" name="style.css" />
 	<h:outputStylesheet library="css" name="style2.css" />
 	<h:outputStylesheet library="css" name="style3.css" />
@@ -26,7 +26,7 @@
 
 		</header>
 
-		<section>
+		<section >
 		<div id="container_demo">
 			<!-- hidden anchor to stop jump http://www.css3create.com/Astuce-Empecher-le-scroll-avec-l-utilisation-de-target#wrap4  -->
 			<a class="hiddenanchor" id="toregister"></a> <a class="hiddenanchor"
