--- a/WebContent/listadoUsuarios.xhtml
+++ b/WebContent/listadoUsuarios.xhtml
@@ -5,11 +5,11 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
-
-<ui:composition template="/WEB-INF/template/MasterPage.xhtml">
-	<ui:define name="content">
-	 
-		<h:dataTable value="#{usuarioManagedBean.listUsuario}" var="u" border="1">
+	<h:outputStylesheet library="css" name="bootstrap.css" />
+	<h:outputStylesheet library="css" name="bootstrap.min.css" />
+	<h:outputStylesheet library="css" name="animate-custom.css" />
+<h:dataTable value="#{usuarioManagedBean.listUsuario}" var="u"
+	border="0" styleClass="table" >
 	<h:column>
 		<f:facet name="header">Id</f:facet>
 				#{u.idUsuario}
@@ -18,33 +18,30 @@
 		<f:facet name="header">Nombre</f:facet>
 				#{u.nombre}
 			</h:column>
-			<h:column>
+	<h:column>
 		<f:facet name="header">Paterno</f:facet>
 				#{u.apePaterno}
 			</h:column>
-			<h:column>
+	<h:column>
 		<f:facet name="header">Materno</f:facet>
 				#{u.apeMaterno}
 			</h:column>
-				<h:column>
+	<h:column>
 		<f:facet name="header">Fecha Nac.</f:facet>
-				#{u.FecNac}
+				#{u.fecNac}
 			</h:column>
-				<h:column>
+	<h:column>
 		<f:facet name="header">Correo</f:facet>
 				#{u.correo}
 			</h:column>
-					<h:column>
+	<h:column>
 		<f:facet name="header">Direccion</f:facet>
 				#{u.direccion}
 			</h:column>
-					<h:column>
+	<h:column>
 		<f:facet name="header">Telefono</f:facet>
 				#{u.telefono}
 			</h:column>
 </h:dataTable>
-	
-			 
-	</ui:define>
-</ui:composition>
+		
 </html>
