--- a/WebContent/listadoUsuarios.xhtml
+++ b/WebContent/listadoUsuarios.xhtml
@@ -5,43 +5,56 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:f="http://java.sun.com/jsf/core">
-	<h:outputStylesheet library="css" name="bootstrap.css" />
-	<h:outputStylesheet library="css" name="bootstrap.min.css" />
-	<h:outputStylesheet library="css" name="animate-custom.css" />
-<h:dataTable value="#{usuarioManagedBean.listUsuario}" var="u"
-	border="0" styleClass="table" >
-	<h:column>
-		<f:facet name="header">Id</f:facet>
-				#{u.idUsuario}
+<h:outputStylesheet library="css" name="bootstrap.css" />
+<h:outputStylesheet library="css" name="bootstrap.min.css" />
+<h:outputStylesheet library="css" name="animate-custom.css" />
+
+<h:head>
+
+</h:head>
+<h:body>
+
+	<h:form>
+
+		<h:dataTable value="#{usuarioManagedBean.listUsuarios}" var="u"
+			border="0" styleClass="table">
+			<h:column>
+				<f:facet name="header">Id</f:facet>
+			
+				 #{u.idUsuario}
+		
 			</h:column>
-	<h:column>
-		<f:facet name="header">Nombre</f:facet>
+			<h:column>
+				<f:facet name="header">Nombre</f:facet>
 				#{u.nombre}
 			</h:column>
-	<h:column>
-		<f:facet name="header">Paterno</f:facet>
+			<h:column>
+				<f:facet name="header">Paterno</f:facet>
 				#{u.apePaterno}
 			</h:column>
-	<h:column>
-		<f:facet name="header">Materno</f:facet>
+			<h:column>
+				<f:facet name="header">Materno</f:facet>
 				#{u.apeMaterno}
 			</h:column>
-	<h:column>
-		<f:facet name="header">Fecha Nac.</f:facet>
+			<h:column>
+				<f:facet name="header">Fecha Nac.</f:facet>
 				#{u.fecNac}
 			</h:column>
-	<h:column>
-		<f:facet name="header">Correo</f:facet>
+			<h:column>
+				<f:facet name="header">Correo</f:facet>
 				#{u.correo}
 			</h:column>
-	<h:column>
-		<f:facet name="header">Direccion</f:facet>
+			<h:column>
+				<f:facet name="header">Direccion</f:facet>
 				#{u.direccion}
 			</h:column>
-	<h:column>
-		<f:facet name="header">Telefono</f:facet>
+			<h:column>
+				<f:facet name="header">Telefono</f:facet>
 				#{u.telefono}
 			</h:column>
-</h:dataTable>
-		
+		</h:dataTable>
+	</h:form>
+
+</h:body>
+
 </html>
