--- a/WebContent/logeo.xhtml
+++ b/WebContent/logeo.xhtml
@@ -3,8 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	>
+	xmlns:f="http://java.sun.com/jsf/core">
 
 <h:head>
 
@@ -26,27 +25,26 @@
 
 		</header>
 
-		<section >
+		<section>
 		<div id="container_demo">
 			<!-- hidden anchor to stop jump http://www.css3create.com/Astuce-Empecher-le-scroll-avec-l-utilisation-de-target#wrap4  -->
 			<a class="hiddenanchor" id="toregister"></a> <a class="hiddenanchor"
 				id="tologin"></a>
 			<div id="wrapper">
 				<div id="login" class="animate form">
-					<h:form >
+					<h:form>
 						<h1>Log in</h1>
 						<p>
-							<label for="username" class="uname" data-icon="u"> email
-								o usuario </label>
-								<input id="username" name="#{logeoManagedBean.oUsuario.correo}"
+							<label for="username" class="uname" data-icon="u"> E-mail
+							</label> <input id="username" name="#{logeoManagedBean.oUsuario.correo}"
 								required="required" type="text"
 								placeholder="mi usuario or miemail@mail.com" />
 						</p>
 						<p>
 							<label for="password" class="youpasswd" data-icon="p">
-								contraseña </label> <input id="password" name="#{logeoManagedBean.oUsuario.clave}"
-								required="required" type="password"
-								placeholder="Ingrese contraseña" />
+								Contraseña </label> <input id="password"
+								name="#{logeoManagedBean.oUsuario.clave}" required="required"
+								type="password" placeholder="Ingrese contraseña" />
 						</p>
 						<p class="keeplogin">
 							<input type="checkbox" name="loginkeeping" id="loginkeeping"
@@ -54,7 +52,8 @@
 								mi contraseña</label>
 						</p>
 						<p class="login button">
-							<h:commandButton  value="Ingresar" action="#{logeoManagedBean.login}"/>
+							<h:commandButton value="Ingresar"
+								action="#{logeoManagedBean.login}" />
 						</p>
 
 					</h:form>
